--- a/app/css/main.scss
+++ b/app/css/main.scss
@@ -4,50 +4,41 @@ body {
 	padding: 0;
 	overflow: hidden;
 	background: #00373d;
-	color: #555;
+	color: #00373d;
 	font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
-h1 {
-	color: #ebdd3f;
+h1,
+h2 {
+	color: #00373d;
 }
 
-#page-wrapper {
+.page-wrapper {
 	width: 875px;
-	margin: 3rem auto;
+	margin: 15px auto;
 	padding: 1.5rem;
 	background: #FFF;
 	border: 8px solid #ebdd3f;
-	box-shadow: 0 2px 10px rgba(0,0,0,0.8);
 }
 
-#synth-pad {
+.synth-pad {
 	float: left;
 	width: 500px;
 	height: 500px;
-	border-radius: 3px;
 	background: #1E1E1E url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAIUlEQVQYV2P8+vWrJAMRgBGkkJub+zkhtaMK8YYQ0cEDABxGJwNr5yClAAAAAElFTkSuQmCC);
 }
 
-#synth-pad:hover {
+.synth-pad:hover {
 	cursor: crosshair;
 }
 
-#info {
+.info {
 	margin-left: 500px;
 	padding-left: 2rem;
 	padding-top: 1rem;
 	-moz-user-select: none;
 	-webkit-user-select: none;
 	-ms-user-select: none;
-}
-
-h1 {
-	font-weight: normal;
-}
-
-p {
-	line-height: 1.8rem;
 }
 
 .clearfix {
